# katana-markdown-model

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  lefthook.yml
.agents/skills/commit_and_push/: SKILL.md
.agents/skills/impl-release/: SKILL.md
.agents/skills/lint-and-ast-lint/: SKILL.md
.github/workflows/: release-preflight.yml  release.yml  test-and-build.yml
docs/: canonical-fixtures.md  downstream-handoff.md  manual-harness.md  parser-adapter-strategy.md  quality-gates.md  release-runbook.md  responsibility-boundary.md  roadmap-v0.1.1.md  roadmap.md  ui-separation-plan.md
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.2.1.md
docs/release-readiness/: v0.1.0-manual-harness.md  v0.1.0-publication.md  v0.1.0-release-pr.md  v0.2.0-kdv-export-dtos.md  v0.2.1-kdv-export-regressions.md
just/: harness.just  maintenance.just  quality.just
openspec/: project.md
scripts/: openspec
src/: error.rs  input.rs  lib.rs
src/document/: impls.rs  mod.rs  types.rs
src/metadata/: mod.rs  resolver.rs  types.rs
src/parser/: block.rs  cursor_blocks.rs  dollar_math.rs  emoji.rs  engine.rs  inline.rs  inline_atoms.rs  inline_links.rs  inline_syntax.rs  line_index.rs  list.rs  list_syntax.rs  mod.rs  quote.rs  table.rs
src/source/: impls.rs  mod.rs  types.rs
tests/: canonical_fixtures.rs  document_model.rs  kdv_export_dtos.rs  kdv_export_v0_2_1_regressions.rs  metadata_resolution.rs  parser_adapter_contract.rs  repository_ast_lint.rs
tests/fixtures/: alerts.md  metadata_uses.json  sample.md
tools/manual-harness/: Cargo.toml
(+72 files in other folders)
