[package]
name = "katana-markdown-model"
version = "0.2.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
description = "Renderer-neutral Markdown document model for the KatanA ecosystem"
repository = "https://github.com/HiroyukiFuruno/katana-markdown-model"
readme = "README.md"
keywords = ["katana", "markdown", "document-model", "metadata"]
categories = ["parser-implementations"]
exclude = ["tools/**"]

[workspace]
members = ["tools/manual-harness"]
resolver = "3"

[lib]
name = "katana_markdown_model"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
katana-ast-lint = "0.5.1"
tempfile = "3.27.0"
